--- a/static/style.css
+++ b/static/style.css
@@ -72,7 +72,7 @@ input[type = 'submit']{
     /* display: none; */
     margin: 30px;
     width: 100%;
-    padding: auto;
+    padding-left: 60px;
 }
 
 .results p span{
