--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,9 @@
                 <select name="school" id="school" required>
                     <option value="0">COHRED</option>
                     <option value="1">COPAS</option>
-                    <option value="0">COHES</option>
+                    <option value="1">COHES</option>
                     <option value="1">COANRE</option>
-                    <option value="0">COETEC</option>
+                    <option value="1">COETEC</option>
                 </select>
                 <br><br>
 
@@ -87,12 +87,12 @@
                 <input type="number" name="cat_2" id="cat_2" required>
                 <br><br>
 
-                <label for="failures">Supplimentary Count (Previous Semester) :</label>
-                <input type="number" name="failures" id="failures" required placeholder="Input between 0 - 4">
+                <label for="absences">Number of School Absences :</label>
+                <input type="number" name="absences" id="absences" required>
                 <br><br>
 
-                <label for="absences">Hours Absent (Whole Semester) :</label>
-                <input type="number" name="absences" id="absences" required>
+                <label for="failures">Number of Class Abscences :</label>
+                <input type="number" name="failures" id="failures" required placeholder="Input between 0 - 4">
                 <br><br>
 
                 <label for="Studytime">Weekly Study Time:</label>
@@ -174,7 +174,7 @@
                 <input type="number" name="traveltime" id="traveltime" required>
                 <br><br>
 
-                <label for="freetime">Daily Free Time (In Hours):</label>
+                <label for="freetime">Daily Free Time After School(In Hours):</label>
                 <input type="number" name="freetime" id="freetime" required>
                 <br><br>
 
