--- a/templates/index.html
+++ b/templates/index.html
@@ -88,11 +88,11 @@
                 <br><br>
 
                 <label for="absences">Number of School Absences :</label>
-                <input type="number" name="absences" id="absences" required>
+                <input type="number" name="absences" id="absences" required placeholder="Totally absent from school">
                 <br><br>
 
                 <label for="failures">Number of Class Abscences :</label>
-                <input type="number" name="failures" id="failures" required placeholder="Input between 0 - 4">
+                <input type="number" name="failures" id="failures" required placeholder="Absent from this specific class">
                 <br><br>
 
                 <label for="Studytime">Weekly Study Time:</label>
